Worked more on the Holygrail.

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
-                <li>01:<a href=""></a></li>
-                <li>02:<a href=""></a></li>
-                <li>03:<a href=""></a></li>
-                <li>04:<a href=""></a></li>
-                <li>05:<a href=""></a></li>
-                <li>06:<a href=""></a></li>
-                <li>07:<a href=""></a></li>
-                <li>08:<a href=""></a></li>
-                <li>09:<a href=""></a></li>
-                <li>10:<a href=""></a></li>
+                <li>01: <a href="lesson01/holygrail.html">Holygrail</a> | <a href=""></a></li>
+                <li>02: <a href=""></a></li>
+                <li>03: <a href=""></a></li>
+                <li>04: <a href=""></a></li>
+                <li>05: <a href=""></a></li>
+                <li>06: <a href=""></a></li>
+                <li>07: <a href=""></a></li>
+                <li>08: <a href=""></a></li>
+                <li>09: <a href=""></a></li>
+                <li>10: <a href=""></a></li>
             </ul>
         </section>
         <section class="card">
@@ -48,7 +48,7 @@
     </main>
     <footer>
         <p>&copy;<span id="currentYear"></span> | Robert Whisenhunt | North Carolina</p></span>
-        <p>Last modification: <span id="lastModified"></span></p>
+        <div class="lastMod"><p>Last modification: <span id="lastModified"></span></p></div>
     </footer>
     <script src="scripts/getdates.js"></script>
 </body>
