--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
-                <li>01: <a href="lesson01/holygrail.html">Holygrail</a> | <a href=""></a></li>
+                <li>01: <a href="lesson01/holygrail.html">Holygrail</a> | <a href="https://codepen.io/Dahweirdacus/pen/ZEPpNmZ">Applied Javascript</a></li>
                 <li>02: <a href=""></a></li>
                 <li>03: <a href=""></a></li>
                 <li>04: <a href=""></a></li>
