--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </nav>
     <main>
         <h2>WDD 230: Web Frontend Development</h2>
+        <hr class="separator">
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
@@ -47,7 +48,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy;<span id="currentYear"></span> | Robert Whisenhunt | North Carolina</p></span>
+        <p>&copy;<span id="currentYear"></span><br>Robert Whisenhunt<br>North Carolina</p>
         <div class="lastMod"><p>Last modification: <span id="lastModified"></span></p></div>
     </footer>
     <script src="scripts/getdates.js"></script>
