Fixed some errors that showed in HTML validation. I hope...

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robert Whisenhunt - WDD 230 - Web Frontend Development</title>
-    <meta description="WDD 230 - Web Frontend Development, Robert Whisenhunt, course assignment portal">
-    <meta author="">
+    <meta name="description" content="WDD 230 - Web Frontend Development, Robert Whisenhunt, course assignment portal"/>
+    <meta name="author" content=""/>
     <link href="https://fonts.googleapis.com/css2?family=Pathway+Extreme:wght@300&family=Roboto+Slab:wght@300&family=Vollkorn&display=swap" rel="stylesheet">
     <link href="styles/base.css" rel="stylesheet">
 </head>
@@ -41,10 +41,10 @@
         </section>
         <section class="card">
             <h3>Information</h3>
-            <ul>
-                <p>Weather:<span id="weather"></span></p>
-                <p>Number of Visits:<span id="visits"></span></p>
-            </ul>
+            <div id="info">
+                <p>Weather: <span id="weather"></span><br>
+                    Number of Visits: <span id="visits"></span></p>
+            </div>
         </section>
     </main>
     <footer>
