Another attempt at fixing HTML Validation errors.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robert Whisenhunt - WDD 230 - Web Frontend Development</title>
-    <meta name="description" content="WDD 230 - Web Frontend Development, Robert Whisenhunt, course assignment portal"/>
-    <meta name="author" content=""/>
+    <meta name="description" content="WDD 230 - Web Frontend Development, Robert Whisenhunt, course assignment portal">
+    <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css2?family=Pathway+Extreme:wght@300&family=Roboto+Slab:wght@300&family=Vollkorn&display=swap" rel="stylesheet">
     <link href="styles/base.css" rel="stylesheet">
 </head>
