Added a comment for the favicon as a reminder for later.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css2?family=Pathway+Extreme:wght@300&family=Roboto+Slab:wght@300&family=Vollkorn&display=swap" rel="stylesheet">
     <link href="styles/base.css" rel="stylesheet">
+    <!-- This adds the icon next to the title. -->
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
