Been working on other things.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <meta name="description" content="WDD 230 - Web Frontend Development, Robert Whisenhunt, course assignment portal">
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css2?family=Pathway+Extreme:wght@300&family=Roboto+Slab:wght@300&family=Vollkorn&display=swap" rel="stylesheet">
+    <link href="styles/normalize.css" rel="stylesheet">
     <link href="styles/base.css" rel="stylesheet">
     <!-- This adds the icon next to the title. -->
     <link rel="icon" href="favicon.ico">
+    <meta property="og:title" content="Robert Whisenhunt - WDD 230 - Web Frontend Development">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://www.worldatlas.com/upload/64/10/03/shutterstock-1427463413.jpg">
+    <meta propert="url" content="https://whisenhunt-robert.github.io/wdd230/">
 </head>
 <body>
     <header>
