Added large css and fixed the things to hopefully match the task at hand.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pathway+Extreme:wght@300&family=Roboto+Slab:wght@300&family=Vollkorn&display=swap" rel="stylesheet">
     <link href="styles/normalize.css" rel="stylesheet">
     <link href="styles/base.css" rel="stylesheet">
+    <link href="styles/large.css" rel="stylesheet">
     <!-- This adds the icon next to the title. -->
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="Robert Whisenhunt - WDD 230 - Web Frontend Development">
