--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Robert Whisenhunt - WDD 230 - Web Frontend Development">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.worldatlas.com/upload/64/10/03/shutterstock-1427463413.jpg">
-    <meta propert="url" content="https://whisenhunt-robert.github.io/wdd230/">
+    <meta property="url" content="https://whisenhunt-robert.github.io/wdd230/">
 </head>
 <body>
     <header>
