--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1>Robert Whisenhunt</h1>
     </header>
     <nav>
-        <a href="#">Home</a>
+        <a href="https://whisenhunt-robert.github.io/wdd230/">Home</a>
         <a href="lesson03/chamber-site-plan.html">Site Plan</a>
         <a href="chamber/">Chamber</a>
         <a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
@@ -36,7 +36,7 @@
             <h3>Learning Activities</h3>
             <ul>
                 <li>01: <a href="lesson01/holygrail.html">Holygrail</a> | <a href="https://codepen.io/Dahweirdacus/pen/ZEPpNmZ">Applied Javascript</a></li>
-                <li>02: <a href=""></a></li>
+                <li>02: <a href="lesson02/design-principles.html">Design Principles</a></li>
                 <li>03: <a href=""></a></li>
                 <li>04: <a href=""></a></li>
                 <li>05: <a href=""></a></li>
