--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
     <header>
         <img src="images/profile_photo.jpg" alt="My profile photo.">
         <h1>Robert Whisenhunt</h1>
+        <!-- <button id="menu"></button> -->
     </header>
-    <nav>
-        <a href="https://whisenhunt-robert.github.io/wdd230/">Home</a>
+    <nav class="navigation">
+        <a href="https://whisenhunt-robert.github.io/wdd230/" class="active">Home</a>
         <a href="lesson03/chamber-site-plan.html">Site Plan</a>
         <a href="chamber/">Chamber</a>
         <a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
@@ -37,7 +38,7 @@
             <ul>
                 <li>01: <a href="lesson01/holygrail.html">Holygrail</a> | <a href="https://codepen.io/Dahweirdacus/pen/ZEPpNmZ">Applied Javascript</a></li>
                 <li>02: <a href="lesson02/design-principles.html">Design Principles</a></li>
-                <li>03: <a href=""></a></li>
+                <li>03: <a href="https://codepen.io/Dahweirdacus/pen/bGZrBdO">CSS Pseudo-elements</a> | <a href="https://codepen.io/Dahweirdacus/pen/eYXEBBJ">Responsive "Hamburger" Menu</a></li>
                 <li>04: <a href=""></a></li>
                 <li>05: <a href=""></a></li>
                 <li>06: <a href=""></a></li>
@@ -54,6 +55,7 @@
                     Number of Visits: <span id="visits"></span></p>
             </div>
         </section>
+        <!-- <iframe title="Winston Salem, NC" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d206307.192153105!2d-80.40826810937106!3d36.10445914932991!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8853a19b82d6b277%3A0x50325f54b43f8245!2sWinston-Salem%2C%20NC!5e0!3m2!1sen!2sus!4v1705990761562!5m2!1sen!2sus" width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
     </main>
     <footer>
         <p>&copy;<span id="currentYear"></span><br>Robert Whisenhunt<br>North Carolina</p>
