--- a/index.html
+++ b/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robert Whisenhunt - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="WDD 230 - Web Frontend Development, Robert Whisenhunt, course assignment portal">
     <meta name="author" content="">
-    <link href="https://fonts.googleapis.com/css2?family=Pathway+Extreme:wght@300&family=Roboto+Slab:wght@300&family=Vollkorn&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Pathway+Extreme:wght@300&family=Roboto+Slab:wght@300&family=Vollkorn&display=swap"
+        rel="stylesheet">
     <link href="styles/normalize.css" rel="stylesheet">
     <link href="styles/base.css" rel="stylesheet">
     <link href="styles/large.css" rel="stylesheet">
     <!-- This adds the icon next to the title. -->
     <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
     <meta property="og:title" content="Robert Whisenhunt - WDD 230 - Web Frontend Development">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.worldatlas.com/upload/64/10/03/shutterstock-1427463413.jpg">
     <meta property="url" content="https://whisenhunt-robert.github.io/wdd230/">
 </head>
+
 <body>
     <header>
         <img src="images/profile_photo.jpg" alt="My profile photo.">
         <h1>Robert Whisenhunt</h1>
-        <!-- <button id="menu"></button> -->
+        <div class="button-container">
+            <button id="menu-btn" class="material-symbols-outlined close-ham-btn">Menu</button>
+            <button id="close-btn" class="material-symbols-outlined">Close</button>
+        </div>
     </header>
     <nav class="navigation">
         <a href="https://whisenhunt-robert.github.io/wdd230/" class="active">Home</a>
@@ -31,36 +40,49 @@
         <a href="https://www.churchofjesuschrist.org/study/scriptures">Scripture</a>
     </nav>
     <main>
-        <h2>WDD 230: Web Frontend Development</h2>
-        <hr class="separator">
-        <section class="card">
-            <h3>Learning Activities</h3>
-            <ul>
-                <li>01: <a href="lesson01/holygrail.html">Holygrail</a> | <a href="https://codepen.io/Dahweirdacus/pen/ZEPpNmZ">Applied Javascript</a></li>
-                <li>02: <a href="lesson02/design-principles.html">Design Principles</a></li>
-                <li>03: <a href="https://codepen.io/Dahweirdacus/pen/bGZrBdO">CSS Pseudo-elements</a> | <a href="https://codepen.io/Dahweirdacus/pen/eYXEBBJ">Responsive "Hamburger" Menu</a></li>
-                <li>04: <a href=""></a></li>
-                <li>05: <a href=""></a></li>
-                <li>06: <a href=""></a></li>
-                <li>07: <a href=""></a></li>
-                <li>08: <a href=""></a></li>
-                <li>09: <a href=""></a></li>
-                <li>10: <a href=""></a></li>
-            </ul>
-        </section>
-        <section class="card">
-            <h3>Information</h3>
-            <div id="info">
-                <p>Weather: <span id="weather"></span><br>
-                    Number of Visits: <span id="visits"></span></p>
-            </div>
-        </section>
-        <!-- <iframe title="Winston Salem, NC" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d206307.192153105!2d-80.40826810937106!3d36.10445914932991!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8853a19b82d6b277%3A0x50325f54b43f8245!2sWinston-Salem%2C%20NC!5e0!3m2!1sen!2sus!4v1705990761562!5m2!1sen!2sus" width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+        <div id="main-container">
+            <h2>WDD 230: Web Frontend Development</h2>
+            <hr class="separator">
+            <section id="section-one" class="card">
+                <h3>Learning Activities</h3>
+                <ul>
+                    <li>01: <a href="lesson01/holygrail.html">Holygrail</a> | <a
+                            href="https://codepen.io/Dahweirdacus/pen/ZEPpNmZ">Applied Javascript</a></li>
+                    <li>02: <a href="lesson02/design-principles.html">Design Principles</a></li>
+                    <li>03: <a href="https://codepen.io/Dahweirdacus/pen/bGZrBdO">CSS Pseudo-elements</a> | <a
+                            href="https://codepen.io/Dahweirdacus/pen/eYXEBBJ">Responsive "Hamburger" Menu</a></li>
+                    <li>04: <a href=""></a></li>
+                    <li>05: <a href=""></a></li>
+                    <li>06: <a href=""></a></li>
+                    <li>07: <a href=""></a></li>
+                    <li>08: <a href=""></a></li>
+                    <li>09: <a href=""></a></li>
+                    <li>10: <a href=""></a></li>
+                </ul>
+            </section>
+            <section id="section-two" class="card">
+                <h3>Information</h3>
+                <div id="info">
+                    <p>Weather: <span id="weather"></span><br>
+                        Number of Visits: <span id="visits"></span></p>
+                </div>
+            </section>
+        </div>
     </main>
+    <div id="map-container">
+        <iframe id="map" title="Winston Salem, NC"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d206307.192153105!2d-80.40826810937106!3d36.10445914932991!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8853a19b82d6b277%3A0x50325f54b43f8245!2sWinston-Salem%2C%20NC!5e0!3m2!1sen!2sus!4v1705990761562!5m2!1sen!2sus"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
     <footer>
         <p>&copy;<span id="currentYear"></span><br>Robert Whisenhunt<br>North Carolina</p>
-        <div class="lastMod"><p>Last modification: <span id="lastModified"></span></p></div>
+        <div class="lastMod">
+            <p>Last modification: <span id="lastModified"></span></p>
+        </div>
     </footer>
     <script src="scripts/getdates.js"></script>
+    <script src="scripts/hamburger.js"></script>
 </body>
+
 </html>
