Possibly got the update home page working.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
     <link href="styles/large.css" rel="stylesheet">
     <!-- This adds the icon next to the title. -->
     <link rel="icon" href="favicon.ico">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
     <meta property="og:title" content="Robert Whisenhunt - WDD 230 - Web Frontend Development">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.worldatlas.com/upload/64/10/03/shutterstock-1427463413.jpg">
@@ -27,11 +25,8 @@
     <header>
         <img src="images/profile_photo.jpg" alt="My profile photo.">
         <h1>Robert Whisenhunt</h1>
-        <div class="button-container">
-            <button id="menu-btn" class="material-symbols-outlined close-ham-btn">Menu</button>
-            <button id="close-btn" class="material-symbols-outlined">Close</button>
-        </div>
     </header>
+    <button id="menu"></button>
     <nav class="navigation">
         <a href="https://whisenhunt-robert.github.io/wdd230/" class="active">Home</a>
         <a href="lesson03/chamber-site-plan.html">Site Plan</a>
