Updated a couple of things.

--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
- 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Design Principles</title>
-    <link href="https://fonts.googleapis.com/css2?family=Pathway+Extreme:wght@300&family=Roboto+Slab:wght@300&family=Vollkorn&display=swap" rel="stylesheet">
+    <meta name="description" content="Design Principles, Robert Whisenhunt">
+    <meta name="author" content="">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Pathway+Extreme:wght@300&family=Roboto+Slab:wght@300&family=Vollkorn&display=swap"
+        rel="stylesheet">
     <link href="styles/normalize.css" rel="stylesheet">
     <link href="styles/base.css" rel="stylesheet">
     <link href="styles/small.css" rel="stylesheet">
     <link href="styles/medium.css" rel="stylesheet">
     <link href="styles/large.css" rel="stylesheet">
 </head>
- 
+
 <body>
     <header>
         <h1>Design Principles Document</h1>
@@ -52,4 +56,5 @@
     </footer>
     <script src="scripts/getdates.js"></script>
 </body>
+
 </html>
