Added link to the chamber site plan on the lesson 3 list.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                             href="https://codepen.io/Dahweirdacus/pen/ZEPpNmZ">Applied Javascript</a></li>
                     <li>02: <a href="lesson02/design-principles.html">Design Principles</a></li>
                     <li>03: <a href="https://codepen.io/Dahweirdacus/pen/bGZrBdO">CSS Pseudo-elements</a> | <a
-                            href="https://codepen.io/Dahweirdacus/pen/eYXEBBJ">Responsive "Hamburger" Menu</a></li>
+                            href="https://codepen.io/Dahweirdacus/pen/eYXEBBJ">Responsive "Hamburger" Menu</a> | <a
+                            href="lesson03/chamber-site-plan.html">Chamber Site Plan</a></li>
                     <li>04: <a href=""></a></li>
                     <li>05: <a href=""></a></li>
                     <li>06: <a href=""></a></li>
