Added the favicon link.

--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -7,6 +7,7 @@
     <title>Chamber Site Plan</title>
     <meta name="description" content="Chamber Site Plan, Robert Whisenhunt, chamber site plan">
     <meta name="author" content="">
+    <link rel="icon" href="/favicon.ico">
     <link
         href="https://fonts.googleapis.com/css2?family=Pathway+Extreme:wght@300&family=Roboto+Slab:wght@300&family=Vollkorn&display=swap"
         rel="stylesheet">
