Added hamburger button and some more styles but still work in progress.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -28,7 +28,9 @@
         </div>
         <div class="vertical-line"></div>
         <div class="header-right">
-            <nav>
+            <!-- Hamburger Button -->
+            <button id="menu"></button>
+            <nav class="navigation">
                 <a href="" class="active">Home</a>
                 <a href="">Discover</a>
                 <a href="">Directory</a>
@@ -57,13 +59,25 @@
     </main>
 
     <footer>
-        <p>&copy;<span id="currentYear"></span> Winston Salem Chamber<br>Robert Whisenhunt<br>WDD 230 Project
-        </p>
-        <div class="lastMod">
-            <p>Last modification: <span id="lastModified"></span></p>
+        <div class="footer-left">
+            <!--City Address & Phone Number.-->
+            <p>101 North Main Street<br>
+                Winston-Salem, NC 27101<br>
+                336-727-8000</p>
+        </div>
+        <div class="footer-right">
+            <!--Social Media icons/links will go here.-->
+        </div>
+        <div class="footer-bottom">
+            <p>&copy;<span id="currentYear"></span> Winston Salem Chamber<br>Robert Whisenhunt<br>WDD 230 Project
+            </p>
+            <div class="lastMod">
+                <p>Last modification: <span id="lastModified"></span></p>
+            </div>
         </div>
     </footer>
     <script src="scripts/getdates.js"></script>
+    <script src="scripts/hamburger.js"></script>
 </body>
 
 </html>
