Struggling with grid again, but at least it changes in large and mobile view...

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -40,22 +40,24 @@
     </header>
 
     <main>
-        <!--Hero Image goes here.-->
-        <img src="images/winston-salem.png" alt="Hero Image">
-        <!--Call to Action-->
-        <a href="">Join the Chamber</a>
-        <section class="events">
-            <!--Current event(s) section-->
-            <p>Events Section</p>
-        </section>
-        <section class="weather">
-            <!--Weather card section-->
-            <p>Weather Section</p>
-        </section>
-        <section class="spotlights">
-            <!--Spotlights section-->
-            <p>Spotlights Section</p>
-        </section>
+        <div id="main-container">
+            <!--Hero Image goes here.-->
+            <img src="images/winston-salem.png" alt="Hero Image">
+            <!--Call to Action-->
+            <a href="">Join the Chamber</a>
+            <section class="events">
+                <!--Current event(s) section-->
+                <p>Events Section</p>
+            </section>
+            <section class="weather">
+                <!--Weather card section-->
+                <p>Weather Section</p>
+            </section>
+            <section class="spotlights">
+                <!--Spotlights section-->
+                <p>Spotlights Section</p>
+            </section>
+        </div>
     </main>
 
     <footer>
