Added headings to sections to fix warning on HTML Validation.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,15 +47,15 @@
             <a href="">Join the Chamber</a>
             <section class="events">
                 <!--Current event(s) section-->
-                <p>Events Section</p>
+                <h2>Events Section</h2>
             </section>
             <section class="weather">
                 <!--Weather card section-->
-                <p>Weather Section</p>
+                <h2>Weather Section</h2>
             </section>
             <section class="spotlights">
                 <!--Spotlights section-->
-                <p>Spotlights Section</p>
+                <h2>Spotlights Section</h2>
             </section>
         </div>
     </main>
