Added a normalize.css file and fixed the og:url error I had.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Winston Salem, NC Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.worldatlas.com/upload/64/10/03/shutterstock-1427463413.jpg">
-    <meta property="url" content="https://whisenhunt-robert.github.io/wdd230/chamber/index.html">
+    <meta property="og:url" content="https://whisenhunt-robert.github.io/wdd230/chamber/index.html">
 </head>
 
 <body>
