Added the link to normalize.css in the head.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -13,6 +13,7 @@
     <link href="styles/base.css" rel="stylesheet">
     <link href="styles/medium.css" rel="stylesheet">
     <link href="styles/large.css" rel="stylesheet">
+    <link href="styles/normalize.css" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="Winston Salem, NC Chamber of Commerce">
     <meta property="og:type" content="website">
