Finished the book of mormon top 10 assignment and added link to home page.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             href="https://codepen.io/Dahweirdacus/pen/eYXEBBJ">Responsive "Hamburger" Menu</a> | <a
                             href="lesson03/chamber-site-plan.html">Chamber Site Plan</a></li>
                     <li>04: <a href=""></a></li>
-                    <li>05: <a href=""></a></li>
+                    <li>05: <a href="lesson05/bom.html">Book of Mormon Favorites</a></li>
                     <li>06: <a href=""></a></li>
                     <li>07: <a href=""></a></li>
                     <li>08: <a href=""></a></li>
