--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,6 +22,9 @@
 </head>
 
 <body>
+    <div id="mode">
+        🌑
+    </div>
     <header>
         <div class="header-left">
             <img src="images/winston-salem-logo.png" alt="Winston Salem Logo">
@@ -81,6 +84,7 @@
     </footer>
     <script src="scripts/getdates.js"></script>
     <script src="scripts/hamburger.js"></script>
+    <script src="scripts/darkmode.js"></script>
 </body>
 
 </html>
