--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <picture>
                 <source srcset="images/dctemple-small.webp" media="(max-width: 550px)">
                 <source srcset="images/dctemple.webp" media="(max-width: 700px)">
-                <img src="images/dctemple.webp" alt="Hero Image">
+                <img src="images/dctemple.webp" alt="Hero Image" loading="lazy">
             </picture>
             <div class="herolabel">
                 <p>Washington D.C. Temple</p>
@@ -72,7 +72,7 @@
                 <h3>Information</h3>
                 <div id="info">
                     <p>Weather: <span id="weather"></span><br>
-                        Number of Visits: <span id="visits"></span></p>
+                        Number of Visits: <span class="visits"></span></p>
                 </div>
             </section>
         </div>
@@ -94,6 +94,7 @@
     <!-- JavaScript calls -->
     <script src="scripts/getdates.js"></script>
     <script src="scripts/hamburger.js"></script>
+    <script src="scripts/visits.js"></script>
 </body>
 
 </html>
