I may have fixed the red X error as I think I removed the inline CSS successfully.

--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
             <div id="map">
                 <iframe title="Winston Salem, NC"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d206307.192153105!2d-80.40826810937106!3d36.10445914932991!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8853a19b82d6b277%3A0x50325f54b43f8245!2sWinston-Salem%2C%20NC!5e0!3m2!1sen!2sus!4v1705990761562!5m2!1sen!2sus"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    width="600" height="450" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
+
             </div>
         </div>
     </main>
