Updated the title and description to mention it being the discover page.

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Winston Salem, NC Chamber of Commerce</title>
-    <meta name="description" content="Winston Salem, NC Chamber of Commerce, Robert Whisenhunt, chamber of commerce">
+    <title>Winston Salem, NC Chamber of Commerce and Discover</title>
+    <meta name="description"
+        content="Winston Salem, NC Chamber of Commerce and Discover, Robert Whisenhunt, chamber of commerce and discover">
     <meta name="author" content="">
     <link
         href="https://fonts.googleapis.com/css2?family=Pathway+Extreme:wght@300&family=Roboto+Slab:wght@300&family=Vollkorn&display=swap"
