--- a/chamber/index.html
+++ b/chamber/index.html
@@ -39,7 +39,7 @@
             <button id="menu"></button>
             <nav class="navigation">
                 <a href="https://whisenhunt-robert.github.io/wdd230/chamber/" class="active">Home</a>
-                <a href="https://whisenhunt-robert.github.io/wdd230/chamber/discover/">Discover</a>
+                <a href="https://whisenhunt-robert.github.io/wdd230/chamber/discover.html">Discover</a>
                 <a href="">Directory</a>
                 <a href="">Join</a>
             </nav>
