--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -53,37 +53,34 @@
                 <h2>Downtown</h2>
                 <p>Tour through Downtown as it offers many buildings to explore, including a library!</p>
             </div>
-            <img class="hover" src="images/downtown.jpg" width="450px" height="500px"
-                alt="Picture of Downtown Winston Salem, NC." loading="lazy">
+            <img class="hover" src="images/downtown.jpg" alt="Picture of Downtown Winston Salem, NC." loading="lazy">
             <div class="place">
                 <h2>Salem Lake</h2>
                 <p>Enjoy a variety of things that this place offers.</p>
             </div>
-            <img class="hover" src="images/salem-lake.jpeg" width="450px" height="400px"
-                alt="Picture of Salem Lake, NC." loading="lazy">
+            <img class="hover" src="images/salem-lake.jpg" alt="Picture of Salem Lake, NC." loading="lazy">
             <div class="place">
                 <h2>Old Salem</h2>
                 <p>Tour through museums and gardens.</p>
             </div>
-            <img class="hover" src="images/old-salem.jpg" width="450px" height="400px" alt="Picture of Old Salem, NC."
-                loading="lazy">
+            <img class="hover" src="images/old-salem.jpg" alt="Picture of Old Salem, NC." loading="lazy">
             <div class="place">
                 <h2>Reynolda House</h2>
                 <p>Tour this Museum of American Art.</p>
             </div>
-            <img class="hover" src="images/reynolda-house.jpg" width="450px" height="400px"
+            <img class="hover" src="images/reynolda-house.jpg"
                 alt="Picture of Reynolda House Museum of American Art in Winston Salem, NC." loading="lazy">
             <div class="place">
                 <h2>Hanes Mall</h2>
                 <p>Browse the many stores this mall has to offer and grab a bite to eat at the food court.</p>
             </div>
-            <img class="hover" src="images/hanes-mall.jpg" width="450px" height="400px"
-                alt="Picture of Hanes Mall in Winston Salem, NC." loading="lazy">
+            <img class="hover" src="images/hanes-mall.jpg" alt="Picture of Hanes Mall in Winston Salem, NC."
+                loading="lazy">
             <div class="place">
                 <h2>Wake Forest University</h2>
                 <p>One of the four popular universities in the state of North Carolina.</p>
             </div>
-            <img class="hover" src="images/wake-forest-u.jpg" width="450px" height="400px"
+            <img class="hover" src="images/wake-forest-u.jpg"
                 alt="Picture of Wake Forest University in Winston Salem, NC." loading="lazy">
             <div class="place">
                 <div class="sidebar" id="sidebar">
