Added link to the form page on the home page.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <li>05: <a href="lesson05/bom.html">Book of Mormon Favorites</a></li>
                     <li>06: <a href="lesson06/images/landscape.webp">WebP</a></li>
                     <li>07: <a href=""></a></li>
-                    <li>08: <a href=""></a></li>
+                    <li>08: <a href="form.html">Form Page</a></li>
                     <li>09: <a href=""></a></li>
                     <li>10: <a href=""></a></li>
                 </ul>
